Fixed footer alignment

--- a/css/yogurtworld.css
+++ b/css/yogurtworld.css
@@ -40,8 +40,7 @@ a:active{
 }
 a i.fa{
   font-size: 30px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-right:20px;
 }
 .panel p{
   color:black;
